# ChangeLog for dev-php/PEAR-Net_DNSBL
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_DNSBL/ChangeLog,v 1.37 2013/11/21 20:44:56 mabi Exp $

*PEAR-Net_DNSBL-1.3.7 (21 Nov 2013)

  21 Nov 2013; Matti Bickel <mabi@gentoo.org> +PEAR-Net_DNSBL-1.3.7.ebuild,
  -PEAR-Net_DNSBL-1.3.0.ebuild, -PEAR-Net_DNSBL-1.3.3.ebuild:
  version bump, remove old

  20 May 2012; Mark Loeser <halcy0n@gentoo.org> PEAR-Net_DNSBL-1.3.0.ebuild:
  Revert to ~ppc/~ppc64; bug #396981

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> PEAR-Net_DNSBL-1.3.6.ebuild:
  ia64/sparc/x86 stable wrt #396981

  02 Mar 2012; Tobias Klausmann <klausman@gentoo.org>
  PEAR-Net_DNSBL-1.3.6.ebuild:
  Stable on alpha, bug #396981

  21 Feb 2012; Jeroen Roovers <jer@gentoo.org> PEAR-Net_DNSBL-1.3.6.ebuild:
  Stable for HPPA (bug #396981).

  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> PEAR-Net_DNSBL-1.3.6.ebuild:
  Stable for amd64, wrt bug #396981

  19 Feb 2012; Raúl Porcel <armin76@gentoo.org> PEAR-Net_DNSBL-1.3.6.ebuild:
  Add ~alpha/~ia64/~sparc wrt #396973

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org> PEAR-Net_DNSBL-1.3.6.ebuild:
  Marked ~hppa (bug #396973).

*PEAR-Net_DNSBL-1.3.6 (15 Jan 2012)

  15 Jan 2012; Matti Bickel <mabi@gentoo.org> +PEAR-Net_DNSBL-1.3.6.ebuild:
  version bump, now uses HTTP_Request2

*PEAR-Net_DNSBL-1.3.3 (22 Aug 2009)

  22 Aug 2009; Steve Dibb <beandog@gentoo.org> +PEAR-Net_DNSBL-1.3.3.ebuild:
  Version bump

  06 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  -PEAR-Net_DNSBL-1.0.0-r1.ebuild, PEAR-Net_DNSBL-1.3.0.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org> PEAR-Net_DNSBL-1.3.0.ebuild:
  Fix LICENSE

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-Net_DNSBL-1.3.0.ebuild:
  ia64 stable wrt #192247

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-Net_DNSBL-1.3.0.ebuild:
  alpha/sparc stable wrt #192247
