@@ -4,25 +4,13 @@ Hash: SHA256
 DIST Net_DNSBL-1.3.6.tgz 8521 SHA256 d3ce3a6f88e21f21665705678a2bf3aac6726a1bda81f6dcbdf7601c8a420983 SHA512 7b585791ef5959dc6b1d167e2ab19cefb0e54259286523f809b8db985352d1f7b52a0ac1ae2a08df72bffc56838d06591a76129ea9bd151bf8f205a441bf4c90 WHIRLPOOL 997d69dfc1926b9339e4c9ac4a2b243f7a24189e3acf244e0dcd4e9d14ed9455b2b7c94ac616fe628bb81f0c1d4a8875f166e936b09e6f669b5893293194c7ae
 DIST Net_DNSBL-1.3.7.tgz 8125 SHA256 6a9a468e291103143ba51c3c2b75f5fc017af528a411ede6fbce9b1d0d09c566 SHA512 6591b81e5e4b98092daea3e27993099028581052a7907b79b4231d549b4d9aaa6fddbd53fd8bfe9734ae41fc85c46f2fc17e5ce50e8303fa5c166dd4b3062ea0 WHIRLPOOL 766659e3c39e22331f72a4bbbfad16e624bab425d418f5f2e94d50c6fe626719c57f674405d9e05ce9b8ed56dd8a35bbd816b8eb250daf6b4bdaf410b80f3fc0
 EBUILD PEAR-Net_DNSBL-1.3.6.ebuild 509 SHA256 8253e9ad68688eae5dd3031f97e58eabf487845353c76cc2fd2f4781470a481e SHA512 8eadf0952b479482db4e9b131ebec1b09aca233c9a53fe6642b5b21eb4e6ba7acccfbd6c6c11dd5ef427d9020c46145e03685131c52fce92af450e59498ae06e WHIRLPOOL efce48aec278ebb6c686ed5c948f486f8458174848e6b1318dc367a0102c7d32a44d756eb64a69737ab58e11ea632c3a4fb3cbc060d60ae52d518678f49a9cb3
-EBUILD PEAR-Net_DNSBL-1.3.7.ebuild 520 SHA256 d2663f696ffa7d44aa2ddc47b63a3feed525c4c5daa15915af5cdce0fe673d39 SHA512 bfedc2c86c9353eea5c8bb1f50a65a28a5e1783c1621af189cf798b1e3e8aaffa6bf7206db58d64ac60e8aaccc12f05148cbba52cb6d997f3cd2eee7e51748a5 WHIRLPOOL 207f4a0f604f9955fbf344a1cf5bd79b8e1d8267d2d0ae20c07dd1db3d40af1387e81ad836fbd7dbddb0d87ac52f01d7cf85916639648890fe1dec6e7f28b4ee
-MISC ChangeLog 4788 SHA256 476f16002d5456a973e5ec19e2a703eebdd398e2a1631dabf23a74597078d15a SHA512 1f7bbd4a2e7db96b305ee41b2a6fa62b36e7d864a08ce834c073b546e2fee79d5c7ebc7f46c4b54080c9bd8b916e193853b6716ed4dc6f7fc885e21a2b33c798 WHIRLPOOL 7391178a59b62e67758e32d3f5d1180e6c76187298f06a13a2a64afc9f3710dbb53034c7a30d1d7d76bd4dab535f38929130d5c47d94ecaa140f0b98a43f3317
+EBUILD PEAR-Net_DNSBL-1.3.7.ebuild 518 SHA256 59eb66be63e8722d98ec9b1ac2cacbdd37b2567a3bc710f9dce0d8ae941d0eab SHA512 868082fde91b1be1297d901fb5232b4ef82db059d8f474475f7febb8c6d19abf9b9e3de67e75a749eaba5c72997ef94a481c110209c2fe98d7a0f800784e4f4e WHIRLPOOL 88b445ed9c7d33b1cba6fc29adb9252667c72e3d748ac0aa4bf1e8d391ce835313a25a6b50d634fbbab1cb48a788896884932c2ed71b87ff52a366a8222be7e1
+MISC ChangeLog 4897 SHA256 a4f7ffaf10c89454caa2d97a3bcfc3036edff83664b2fb4259900218950e6306 SHA512 8f656da8cbdf76e53f36febdbee95a2e10a3b79149eb8ab3b97c1dd7bce78dcfe4514bbafc8c2b6f2ff7db1361b358fa20a362754717fd0705c153983bf4c90d WHIRLPOOL d70bb456bce7072c7a25378f3f913dcc76a1fbd8539be80903ff1a3e3fbb1be660559a74ed07ada741c175c5de620074dacae5ac1040040d499331aae63413ee
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJSjn7sXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRBNzE1M0M4QzQxMzM4REREMjMzQjg4NUZE
-REY5NzFGMTE4RUVBNUU2AAoJEN35cfEY7qXmxE4P/02f4Okaa7hdFiJ7VGEKbg2e
-hc5OjaXPmYPmxAb/AIxHSETYEHDecfwhQ/+KrTyKkTl0snN1Vm/kxpqdNUlIh3aF
-x8UTjudNSCXx6cLR2ylbDdAoqWyIyFDAvH+CQNCRSqflgjisywv80hk2ftoRnpBR
-C2h2JQmDj0yv5yCseB6jmYuK5qVxHkBCh2h6vsvSDp1R86CLhNZKBKiEjaQdKrom
-LoWwisaoSNK7REU1gJ5Q8B7dPStB9YKv41m4GQtLpeA7Qw7g5u9QBK6GVihzj03S
-OV7SpnUf+IGEfRSXhSrcq1cwO+KXs6qG/b4fWd0L34c1yYZ8KfacXkWgqxl4jtKZ
-8YKVw5V+i2J1zZXEvEXOC+betRi1EUaCXkXbjHpqwBtQRanvDVIpGlr5L5EVPPHe
-nGAc0jkx4Qu8UJyLwTfzD7LgZxdqUEgAVmjPp42qI1wY8HhhCDj8b/WDf8YSBRhy
-+I4PllbiP5+yKvuaFWKthpYMnCK59ANRBF/BcvS5Fo6REyYgQgWwITs/LyMUMzrB
-8xHvlqcMHb1y8EXpJv39gIh0ZevOXimpaDm6tNLPUkTHN1zpnAo1tLS/fubVP0ys
-dGTgppJs7rilgFYiApVzAMVD+XaqnVEF+DemigbtAzhQcVaR2CarTYonPAh3WTSo
-Ws/UtIHJK0R6a02et8Ng
-=6PYc
+iEYEAREIAAYFAlVIcXkACgkQVWmRsqeSphNGsQCfSLC1wuzxwpgPyj/5sqwQmMfE
+uLcAn0NT1UpXvHXZM8kiQxMxOpksq+dF
+=rl+t
 -----END PGP SIGNATURE-----
