@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_DNSBL/PEAR-Net_DNSBL-1.3.7.ebuild,v 1.1 2013/11/21 20:44:56 mabi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_DNSBL/PEAR-Net_DNSBL-1.3.7.ebuild,v 1.2 2015/05/05 07:30:00 jer Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ DESCRIPTION="DNSBL Checker"
 
 LICENSE="PHP-3.01"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 hppa ~ia64 ~sparc ~x86"
 IUSE=""
 RDEPEND=">=dev-php/PEAR-Cache_Lite-1.5.2-r1
 	>=dev-php/PEAR-Net_CheckIP-1.1-r1
