@@ -3,10 +3,10 @@ DEPEND=dev-lang/php:* >=dev-php/pear-1.8.1
 DESCRIPTION=DNSBL Checker
 EAPI=5
 HOMEPAGE=http://pear.php.net/Net_DNSBL
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~sparc ~x86
+KEYWORDS=~alpha ~amd64 hppa ~ia64 ~sparc ~x86
 LICENSE=PHP-3.01
 RDEPEND=>=dev-php/PEAR-Cache_Lite-1.5.2-r1 >=dev-php/PEAR-Net_CheckIP-1.1-r1 >=dev-php/PEAR-HTTP_Request2-2.0.0 >=dev-php/PEAR-Net_DNS-1.0.0 dev-lang/php:* >=dev-php/pear-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/Net_DNSBL-1.3.7.tgz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=0ac8b841270c419ae17db57a7d6af658
+_md5_=7d259b9b875232dd29213c37a81b62e4
