@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-Net_DNSBL
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_DNSBL/ChangeLog,v 1.37 2013/11/21 20:44:56 mabi Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_DNSBL/ChangeLog,v 1.38 2015/05/05 07:30:00 jer Exp $
+
+  05 May 2015; Jeroen Roovers <jer@gentoo.org> PEAR-Net_DNSBL-1.3.7.ebuild:
+  Stable for HPPA (bug #548618).
 
 *PEAR-Net_DNSBL-1.3.7 (21 Nov 2013)
 
